[package]
name = "dmppd"
version = "0.1.0"
authors = ["post-rex <post-rex@pm.me>"]
edition = "2018"

[dependencies]
# tracing = "0.1"
# tracing-subscriber = "0.2"
nom = "6.1"
crc32fast = "1.2"
actix = "0.10"
flume = "0.10"

[dependencies.tokio]
version = "1.2"
features = ["rt", "rt-multi-thread", "io-util", "net", "macros"]

[dependencies.bytes]
version = "1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]